--- a/ITCrowdProject/pom.xml
+++ b/ITCrowdProject/pom.xml
@@ -59,6 +59,22 @@
           <artifactId>selenium-support</artifactId>
           <version>3.141.59</version>
       </dependency>
+      <dependency>
+          <groupId>io.github.bonigarcia</groupId>
+          <artifactId>webdrivermanager</artifactId>
+          <version>3.4.0</version>
+      </dependency>
   </dependencies>
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <testClassesDirectory>${project.build.directory}/classes/</testClassesDirectory>
+                    <useSystemClassLoader>false</useSystemClassLoader>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
