--- a/ITCrowdProject/pom.xml
+++ b/ITCrowdProject/pom.xml
@@ -59,6 +59,13 @@
           <artifactId>selenium-support</artifactId>
           <version>3.141.59</version>
       </dependency>
+      <!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.6</version>
+      </dependency>
+
   </dependencies>
 
 </project>
