--- a/ITCrowdProject/pom.xml
+++ b/ITCrowdProject/pom.xml
@@ -59,6 +59,11 @@
           <artifactId>selenium-support</artifactId>
           <version>3.141.59</version>
       </dependency>
+      <dependency>
+          <groupId>io.github.bonigarcia</groupId>
+          <artifactId>webdrivermanager</artifactId>
+          <version>3.4.0</version>
+      </dependency>
   </dependencies>
 
 </project>
