--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .idea
 target
 *.iml
+ITCrowdProject/src/.DS_Store
+ITCrowdProject/src/main/.DS_Store
+ITCrowdProject/src/main/java/.DS_Store
+ITCrowdProject/src/main/java/pl/.DS_Store
