tca_7 conflict resolve

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ ITCrowdProject/src/main/.DS_Store
 ITCrowdProject/src/main/java/.DS_Store
 ITCrowdProject/src/main/java/pl/.DS_Store
 ITCrowdProject/chromedriver
+.DS_Store
