--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ ITCrowdProject/src/main/java/.DS_Store
 ITCrowdProject/src/main/java/pl/.DS_Store
 ITCrowdProject/chromedriver
 .DS_Store
+ITCrowdProject/.DS_Store
+.DS_Store
+.DS_Store
