--- a/ITCrowdProject/pom.xml
+++ b/ITCrowdProject/pom.xml
@@ -64,6 +64,11 @@
           <artifactId>webdrivermanager</artifactId>
           <version>3.4.0</version>
       </dependency>
+      <dependency>
+          <groupId>commons-io</groupId>
+          <artifactId>commons-io</artifactId>
+          <version>2.6</version>
+      </dependency>
   </dependencies>
 
 </project>
