--- a/ITCrowdProject/pom.xml
+++ b/ITCrowdProject/pom.xml
@@ -69,6 +69,11 @@
           <artifactId>commons-io</artifactId>
           <version>2.6</version>
       </dependency>
+      <dependency>
+          <groupId>io.github.bonigarcia</groupId>
+          <artifactId>webdrivermanager</artifactId>
+          <version>3.4.0</version>
+      </dependency>
   </dependencies>
 
 </project>
